crates/wac-parser/tests/resolution/fail/duplicate-resource-constructor.wac
package test:comp;

interface foo {
    resource x {
        constructor();
        constructor(x: u32);
    }
}